WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122690
[sh4] Missing spaces in JITStubsSH4.h
https://bugs.webkit.org/show_bug.cgi?id=122690
Summary
[sh4] Missing spaces in JITStubsSH4.h
Julien Brianceau
Reported
2013-10-12 01:45:35 PDT
Missing spaces in JITStubsSH4.h break the sh4 build when using a C++11 sh4 compiler: [ 50%] Building CXX object Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/jit/JITStubs.cpp.o In file included from /home/ubuntu/work/sh4/webkit/Source/JavaScriptCore/jit/JITStubs.cpp:93:0: /home/ubuntu/work/sh4/webkit/Source/JavaScriptCore/jit/JITStubsSH4.h:89:5: erreur: unable to find string literal operator 'operator"" SYMBOL_STRING' /home/ubuntu/work/sh4/webkit/Source/JavaScriptCore/jit/JITStubsSH4.h:113:5: erreur: unable to find string literal operator 'operator"" SYMBOL_STRING' /home/ubuntu/work/sh4/webkit/Source/JavaScriptCore/jit/JITStubs.cpp:427:1: erreur: unable to find string literal operator 'operator"" SYMBOL_STRING' /home/ubuntu/work/sh4/webkit/Source/JavaScriptCore/jit/JITStubs.cpp:439:1: erreur: unable to find string literal operator 'operator"" SYMBOL_STRING' /home/ubuntu/work/sh4/webkit/Source/JavaScriptCore/jit/JITStubs.cpp:450:1: erreur: unable to find string literal operator 'operator"" SYMBOL_STRING' /home/ubuntu/work/sh4/webkit/Source/JavaScriptCore/jit/JITStubs.cpp:463:1: erreur: unable to find string literal operator 'operator"" SYMBOL_STRING' [...]
Attachments
Add missing spaces in JITStubsSH4.h
(2.98 KB, patch)
2013-10-12 01:49 PDT
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2013-10-12 01:49:02 PDT
Created
attachment 214052
[details]
Add missing spaces in JITStubsSH4.h
WebKit Commit Bot
Comment 2
2013-10-12 02:24:12 PDT
Comment on
attachment 214052
[details]
Add missing spaces in JITStubsSH4.h Clearing flags on attachment: 214052 Committed
r157335
: <
http://trac.webkit.org/changeset/157335
>
WebKit Commit Bot
Comment 3
2013-10-12 02:24:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug