[sh4] Add missing spaces in JITStubsSH4.h https://bugs.webkit.org/show_bug.cgi?id=122690

Patch by Julien Brianceau <jbriance@cisco.com> on 2013-10-12
Reviewed by Andreas Kling.

* jit/JITStubsSH4.h: Space between string concatenation is mandatory with C++11

Canonical link: https://commits.webkit.org/140804@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157335 268f45cc-cd09-0410-ab3c-d52691b4dbfc